--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
       <div class="header-sec">
         <div class="header">FinPal</div>
-        <div class="sub-head">Your portfolio helper bot</div>
+        <div class="sub-head">Simplifying risk and portfolio allocation since 2019</div>
       </div>
       <div class="bot-container">
         <iframe width="100%" height="100%" allow="microphone;" src="https://console.dialogflow.com/api-client/demo/embedded/e4a92e67-ac29-44af-aefb-3a4c5939df6c"></iframe>
